--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -48,6 +48,9 @@ publish-date:
 post-details:
   other: Post details
 
+post-meta:
+  other: Meta
+
 publication-details:
   other: Publication details
 
