--- a/i18n/el.yaml
+++ b/i18n/el.yaml
@@ -5,6 +5,12 @@ filter-reset:
 show-more:
   other: Περισσότερα
 
+next:
+  other: Επόμενο
+
+previous:
+  other: Προηγούμενο
+
 
 ## social sharing
 
