--- a/i18n/el.yaml
+++ b/i18n/el.yaml
@@ -119,3 +119,9 @@ github-last-pushed:
 
 404-error:
   other: 'Σφάλμα 404: Η σελίδα δεν βρέθηκε'
+
+
+## RSS feed
+
+rss-about:
+  other: 'Αυτή είναι μια [Ροή Δεδομένων RSS](https://aboutfeeds.com/), μια μηχαναγνώσιμη σελίδα με πρόσφατα άρθρα από αυτό τον ιστότοπο. Μπορείς να πρακολουθείς τις ανανεώσεις με ένα πρόγραμμα ανάγνωσης RSS.'
