Refactor RSS, JSON feed

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -125,3 +125,6 @@ github-last-pushed:
 
 rss-about:
   other: 'This is an [RSS feed](https://aboutfeeds.com/), a machine-readable page with recent articles from this website. You can subscribe and receive updates with a newsreader.'
+
+rss-languages:
+  other: 'Available languages: '
