Add limit to feeds

--- a/i18n/el.yaml
+++ b/i18n/el.yaml
@@ -124,7 +124,7 @@ github-last-pushed:
 ## RSS feed
 
 rss-about:
-  other: 'Αυτή είναι μια [Ροή Δεδομένων RSS](https://el.wikipedia.org/wiki/RSS), μια μηχαναγνώσιμη σελίδα με πρόσφατα άρθρα από αυτό τον ιστότοπο. Μπορείς να πρακολουθείς τις ανανεώσεις με ένα πρόγραμμα ανάγνωσης RSS.'
+  other: 'Αυτή είναι μια [ροή RSS](https://el.wikipedia.org/wiki/RSS), μια μηχαναγνώσιμη σελίδα με πρόσφατα άρθρα από αυτό τον ιστότοπο. Μπορείς να πρακολουθείς τις ανανεώσεις με ένα πρόγραμμα ανάγνωσης RSS.'
 
 rss-languages:
   other: 'Διαθέσιμες γλώσσες: '
